# Online-Book-Reader

./: AdminView.cpp  AdminView.h  Book.cpp  Book.h  BookReadingSession.cpp  BookReadingSession.h  BooksManager.cpp  BooksManager.h  CMakeLists.txt  HelperFunctions.cpp  README.md  User.h  UserView.cpp
headers/: BookReaderSystem.h  HelperFunctions.h  UserView.h  UsersManager.h
src code/: BookReaderSystem.cpp  User.cpp  UsersManager.cpp  main.cpp
